--- a/package.json
+++ b/package.json
@@ -6,15 +6,22 @@
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "generate": "node ./bin/generator.js data/posts -o src/data/posts.json -m data/meta"
+    "generate": "node ./bin/generator.js data/posts -o src/data/posts.json -m data/meta",
+    "lint": "eslint --ignore-path .gitignore src",
+    "lint:fix": "eslint --fix --ignore-path .gitignore src",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.pug|*.html|*.png|*.webp|*.svg)'"
   },
   "keywords": [],
   "author": "khirayama",
   "license": "",
   "devDependencies": {
+    "eslint": "4.19.1",
+    "eslint-config-prettier": "2.9.0",
+    "eslint-config-xo-space": "0.18.0",
     "marked": "0.4.0",
     "minimist": "1.2.0",
-    "nodemon": "1.17.5"
+    "nodemon": "1.17.5",
+    "prettier": "1.12.1"
   },
   "dependencies": {
     "express": "4.16.3",
