--- a/package.json
+++ b/package.json
@@ -4,25 +4,46 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "clean": "rm -rf src/assets",
+    "start": "npm run clean && npm run generate && npm run bundle:scripts && npm run build:styles && node src/index.js",
+    "dev": "npm run clean && npm run generate && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'nodemon src/index.js'",
     "generate": "node ./bin/generator.js data/posts -o src/data/posts.json -m data/meta",
-    "lint": "eslint --ignore-path .gitignore src",
-    "lint:fix": "eslint --fix --ignore-path .gitignore src",
-    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.pug|*.html|*.png|*.webp|*.svg)'",
+    "bundle:scripts": "NODE_ENV=production webpack --mode production",
+    "bundle:scripts:watch": "webpack -w --mode development",
+    "bundle:scripts:analyze": "NODE_ENV=production ANALYSIS=true webpack --mode production",
+    "build:styles": "postcss -c .postcssrc.js 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/assets'",
+    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/assets'",
+    "compress:images": "node bin/minimize-images.js",
+    "lint": "eslint --ignore-path .gitignore src bin webpack.config.js",
+    "lint:fix": "eslint --fix --ignore-path .gitignore src bin webpack.config.js",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.pug|*.html|*.png|*.webp|*.svg)' bin webpack.config.js .eslintrc.js .postcssrc.js",
     "precommit": "npm run lint:fix && npm run format"
   },
   "keywords": [],
   "author": "khirayama",
   "license": "",
   "devDependencies": {
+    "babel-core": "6.26.3",
+    "babel-eslint": "8.2.3",
+    "babel-loader": "7.1.4",
+    "babel-preset-env": "1.7.0",
+    "concurrently": "3.5.1",
+    "cssnano": "3.10.0",
     "eslint": "4.19.1",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-xo-space": "0.18.0",
+    "glob": "7.1.2",
     "marked": "0.4.0",
     "minimist": "1.2.0",
     "nodemon": "1.17.5",
-    "prettier": "1.12.1"
+    "postcss-cli": "5.0.0",
+    "postcss-import": "11.1.0",
+    "postcss-nested": "3.0.0",
+    "postcss-simple-vars": "4.1.0",
+    "prettier": "1.12.1",
+    "webpack": "4.9.1",
+    "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cli": "2.1.4"
   },
   "dependencies": {
     "express": "4.16.3",
