--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "clean": "rm -rf src/assets",
+    "clean": "rm -rf src/public",
     "start": "npm run clean && npm run generate && npm run bundle:scripts && npm run build:styles && node src/index.js",
     "dev": "npm run clean && npm run generate && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'nodemon src/index.js'",
     "generate": "node ./bin/generator.js data/posts -o src/data/posts.json -m data/meta",
     "bundle:scripts": "NODE_ENV=production webpack --mode production",
     "bundle:scripts:watch": "webpack -w --mode development",
     "bundle:scripts:analyze": "NODE_ENV=production ANALYSIS=true webpack --mode production",
-    "build:styles": "postcss -c .postcssrc.js 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/assets'",
-    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/assets'",
+    "build:styles": "postcss -c .postcssrc.js 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/public'",
+    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/public'",
     "compress:images": "node bin/minimize-images.js",
     "lint": "eslint --ignore-path .gitignore src bin webpack.config.js",
     "lint:fix": "eslint --fix --ignore-path .gitignore src bin webpack.config.js",
