--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "webpack-cli": "2.1.4"
   },
   "dependencies": {
+    "compression": "1.7.2",
+    "cookie-parser": "1.4.3",
     "express": "4.16.3",
     "pug": "^2.0.3"
   }
