Add need packages related handling images

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bundle:scripts:analyze": "NODE_ENV=production ANALYSIS=true webpack --mode production",
     "build:styles": "postcss -c .postcssrc.js 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/public'",
     "build:styles:watch": "postcss -c .postcssrc.js -w 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/public'",
+    "build:images": "node bin/minimize-images.js",
     "compress:images": "node bin/minimize-images.js",
     "lint": "eslint --ignore-path .gitignore src bin webpack.config.js",
     "lint:fix": "eslint --fix --ignore-path .gitignore src bin webpack.config.js",
@@ -34,6 +35,10 @@
     "eslint-config-prettier": "2.9.0",
     "eslint-config-xo-space": "0.18.0",
     "glob": "7.1.2",
+    "imagemin": "5.3.1",
+    "imagemin-jpegtran": "5.0.2",
+    "imagemin-pngquant": "5.1.0",
+    "imagemin-webp": "4.1.0",
     "minimist": "1.2.0",
     "nodemon": "1.17.5",
     "postcss-cli": "5.0.0",
