--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "postcss-nested": "3.0.0",
     "postcss-simple-vars": "4.1.0",
     "prettier": "1.12.1",
+    "rss": "1.2.2",
     "webpack": "4.9.1",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "2.1.4"
