--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint": "4.19.1",
     "eslint-config-prettier": "2.9.0",
     "eslint-config-xo-space": "0.18.0",
+    "eslint-plugin-prettier": "2.6.0",
     "glob": "7.1.2",
     "imagemin": "5.3.1",
     "imagemin-jpegtran": "5.0.2",
