Change whole structure

--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "bundle:scripts": "NODE_ENV=production webpack --mode production",
     "bundle:scripts:watch": "webpack -w --mode development",
     "bundle:scripts:analyze": "NODE_ENV=production ANALYSIS=true webpack --mode production",
-    "build:styles": "postcss -c .postcssrc.js 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/public'",
-    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/styles/pages/**/index.css' 'src/styles/index.css' --base src --dir './src/public'",
+    "build:styles": "postcss -c .postcssrc.js 'src/presentations/**/index.css' --base src/presentations --dir './src/public'",
+    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/presentations/**/index.css' --base src/presentations --dir './src/public'",
     "build:images": "node bin/minimize-images.js",
     "compress:images": "node bin/minimize-images.js",
     "lint": "eslint --ignore-path .gitignore src bin webpack.config.js",
