--- a/package.json
+++ b/package.json
@@ -56,6 +56,6 @@
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
     "express": "4.16.3",
-    "pug": "^2.0.3"
+    "pug": "2.0.3"
   }
 }
