Update meta info for layout

--- a/src/config.json
+++ b/src/config.json
@@ -4,7 +4,7 @@
   "url": "https://about-our-coffee.com",
   "languages": ["ja", "en"],
   "author": "ABOUT OUR COFFEE",
-  "keywords": "coffee, about our coffee",
+  "keywords": "coffee, コーヒー, about our coffee",
   "facebookAppId": "test id",
   "facebookPageUrl": "facebook page url",
   "twitterCardType": "summary_large_image",
