--- a/src/config.json
+++ b/src/config.json
@@ -1,9 +1,9 @@
 {
-  "url": "https://about-our-coffee.com",
+  "url": "https://hirayamacoffee.com",
   "languages": ["ja", "en"],
-  "keywords": "coffee, コーヒー, about our coffee",
+  "keywords": "hirayama, 平山, coffee, コーヒー, 珈琲, institute, 研究所",
   "facebookAppId": "test id",
   "facebookPageUrl": "facebook page url",
   "twitterCardType": "summary_large_image",
-  "twitterAccount": "@about_our_coffee"
+  "twitterAccount": "@hirayama_coffee_institute"
 }
