--- a/package.json
+++ b/package.json
@@ -54,6 +54,9 @@
     "postcss-simple-vars": "4.1.0",
     "prettier": "1.13.5",
     "rss": "1.2.2",
+    "ts-loader": "4.4.1",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
+    "typescript": "2.9.2",
     "webpack": "4.12.0",
     "webpack-bundle-analyzer": "2.13.1",
     "webpack-cli": "3.0.4"
