Migrate javascript to typescript

--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "coffee",
   "version": "0.0.1",
   "description": "",
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "clean": "rm -rf src/public",
-    "start": "npm run clean && npm run generate && npm run bundle:scripts && npm run build:styles && NODE_PATH=src node src/index.js",
-    "dev": "npm run clean && npm run generate && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'NODE_PATH=src nodemon src/index.js'",
+    "clean": "rm -rf src/public dist",
+    "start": "npm run clean && npm run generate && npm run bundle:scripts && npm run build:styles && npm run compile:scripts && npm run copy:files && NODE_PATH=dist node dist/index.js",
+    "dev": "npm run clean && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'npm run compile:scripts:watch' 'npm run copy:files:watch' 'NODE_PATH=dist nodemon dist/index.js'",
     "generate": "node ./bin/generator.js data/posts -o src/data/posts/index.json -m data/meta",
+    "compile:scripts": "tsc -p tsconfig.server.json",
+    "compile:scripts:watch": "tsc -p tsconfig.server.json -w",
     "bundle:scripts": "NODE_ENV=production webpack --mode production",
     "bundle:scripts:watch": "webpack -w --mode development",
     "bundle:scripts:analyze": "NODE_ENV=production ANALYSIS=true webpack --mode production",
-    "build:styles": "postcss -c .postcssrc.js 'src/presentations/**/index.css' --base src/presentations --dir './src/public'",
-    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/presentations/**/index.css' --base src/presentations --dir './src/public'",
+    "build:styles": "postcss -c .postcssrc.js 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
+    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
+    "copy:files": "cpx 'src/**/*.{json,woff2,png,jpg,ico,wepb,js,svg,pug}' dist",
+    "copy:files:watch": "cpx -w 'src/**/*.{json,woff2,png,jpg,ico,webp,js,svg,pug}' dist",
     "build:images": "node bin/minimize-images.js",
     "compress:images": "node bin/minimize-images.js",
     "lint": "eslint --ignore-path .gitignore src bin webpack.config.js",
@@ -31,11 +35,13 @@
     "pug": "2.0.3"
   },
   "devDependencies": {
+    "@types/node": "10.3.3",
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.3",
     "babel-loader": "7.1.4",
     "babel-preset-env": "1.7.0",
     "concurrently": "3.5.1",
+    "cpx": "1.5.0",
     "cssnano": "3.10.0",
     "eslint": "4.19.1",
     "eslint-config-prettier": "2.9.0",
