--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "copy:files": "cpx 'src/**/*.{json,woff2,png,jpg,ico,wepb,js,svg,pug}' dist",
     "copy:files:watch": "cpx -w 'src/**/*.{json,woff2,png,jpg,ico,webp,js,svg,pug}' dist",
     "build:images": "node bin/minimize-images.js",
-    "lint": "eslint --ignore-path .gitignore src bin webpack.config.js",
-    "lint:fix": "eslint --fix --ignore-path .gitignore src bin webpack.config.js",
+    "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}'",
+    "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}'",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.html|*.png|*.webp|*.svg)'",
     "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' bin webpack.config.js .eslintrc.js .postcssrc.js",
     "precommit": "npm run lint:fix && npm run format",
     "check": "npx npm-check-updates"
@@ -60,6 +61,10 @@
     "rss": "1.2.2",
     "ts-loader": "4.4.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
+    "tslint": "5.10.0",
+    "tslint-config-prettier": "1.13.0",
+    "tslint-microsoft-contrib": "5.0.3",
+    "tslint-plugin-prettier": "1.3.0",
     "typescript": "2.9.2",
     "webpack": "4.12.0",
     "webpack-bundle-analyzer": "2.13.1",
