Create manifest.json for ja and en version

--- a/src/assets/manifest.ja.json
+++ b/src/assets/manifest.ja.json
@@ -1,6 +1,6 @@
 {
-  "name": "No title",
-  "short_name": "No title",
+  "name": "平山珈琲研究所",
+  "short_name": "平山珈琲研究所",
   "icons": [
     {
       "src": "/images/logo/icon_android.png",
