Uninstall needless packages

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "copy:files": "cpx 'src/**/*.{json,woff2,png,jpg,ico,wepb,js,svg,pug}' dist",
     "copy:files:watch": "cpx -w 'src/**/*.{json,woff2,png,jpg,ico,webp,js,svg,pug}' dist",
     "build:images": "node bin/minimize-images.js",
+    "test": "mocha --require espower-typescript/guess test/**/*.ts",
     "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}'",
     "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}'",
     "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' bin webpack.config.js .eslintrc.js .postcssrc.js",
@@ -33,6 +34,7 @@
     "pug": "2.0.3"
   },
   "devDependencies": {
+    "@types/mocha": "5.2.3",
     "@types/node": "10.3.4",
     "babel-core": "6.26.3",
     "babel-eslint": "8.2.3",
@@ -45,17 +47,20 @@
     "eslint-config-prettier": "2.9.0",
     "eslint-config-xo-space": "0.18.0",
     "eslint-plugin-prettier": "2.6.0",
+    "espower-typescript": "9.0.0",
     "glob": "7.1.2",
     "imagemin": "5.3.1",
     "imagemin-jpegtran": "5.0.2",
     "imagemin-pngquant": "5.1.0",
     "imagemin-webp": "4.1.0",
     "minimist": "1.2.0",
+    "mocha": "5.2.0",
     "nodemon": "1.17.5",
     "postcss-cli": "5.0.0",
     "postcss-import": "11.1.0",
     "postcss-nested": "3.0.0",
     "postcss-simple-vars": "4.1.0",
+    "power-assert": "1.6.0",
     "prettier": "1.13.5",
     "rss": "1.2.2",
     "ts-loader": "4.4.1",
