--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}'",
     "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' bin webpack.config.js .eslintrc.js .postcssrc.js",
     "precommit": "npm run lint:fix && npm run format",
+    "metcis": "npx hint localhost:3030",
     "check": "npx npm-check-updates"
   },
   "keywords": [],
@@ -50,6 +51,7 @@
     "eslint-plugin-prettier": "2.6.0",
     "espower-typescript": "9.0.0",
     "glob": "7.1.2",
+    "hint": "3.2.0",
     "imagemin": "5.3.1",
     "imagemin-jpegtran": "5.0.2",
     "imagemin-pngquant": "5.1.0",
