--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "compression": "1.7.2",
     "cookie-parser": "1.4.3",
     "express": "4.16.3",
+    "fuse.js": "3.2.1",
     "pug": "2.0.3"
   },
   "devDependencies": {
