--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "license": "",
   "dependencies": {
     "@types/leaflet": "1.2.10",
-    "compression": "1.7.2",
+    "compression": "1.7.3",
     "cookie-parser": "1.4.3",
     "express": "4.16.3",
     "fuse.js": "3.2.1",
@@ -39,45 +39,46 @@
     "pug": "2.0.3"
   },
   "devDependencies": {
-    "@types/mocha": "5.2.3",
-    "@types/node": "10.3.4",
+    "@types/mocha": "5.2.5",
+    "@types/node": "10.9.2",
+    "autoprefixer": "9.1.3",
     "babel-core": "6.26.3",
-    "babel-eslint": "8.2.3",
-    "babel-loader": "7.1.4",
+    "babel-eslint": "9.0.0",
+    "babel-loader": "8.0.0",
     "babel-preset-env": "1.7.0",
-    "concurrently": "3.5.1",
+    "concurrently": "4.0.1",
     "cpx": "1.5.0",
-    "cssnano": "3.10.0",
-    "eslint": "4.19.1",
-    "eslint-config-prettier": "2.9.0",
-    "eslint-config-xo-space": "0.18.0",
-    "eslint-plugin-prettier": "2.6.0",
+    "cssnano": "4.1.0",
+    "eslint": "5.4.0",
+    "eslint-config-prettier": "3.0.1",
+    "eslint-config-xo-space": "0.20.0",
+    "eslint-plugin-prettier": "2.6.2",
     "espower-typescript": "9.0.0",
-    "glob": "7.1.2",
-    "hint": "3.2.0",
-    "imagemin": "5.3.1",
+    "glob": "7.1.3",
+    "hint": "3.2.3",
+    "imagemin": "6.0.0",
     "imagemin-jpegtran": "5.0.2",
-    "imagemin-pngquant": "5.1.0",
+    "imagemin-pngquant": "6.0.0",
     "imagemin-webp": "4.1.0",
     "minimist": "1.2.0",
     "mocha": "5.2.0",
-    "nodemon": "1.17.5",
-    "postcss-cli": "5.0.0",
-    "postcss-import": "11.1.0",
+    "nodemon": "1.18.3",
+    "postcss-cli": "6.0.0",
+    "postcss-import": "12.0.0",
     "postcss-nested": "3.0.0",
     "postcss-simple-vars": "4.1.0",
     "power-assert": "1.6.0",
-    "prettier": "1.13.5",
+    "prettier": "1.14.2",
     "rss": "1.2.2",
-    "ts-loader": "4.4.2",
+    "ts-loader": "4.5.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
-    "tslint": "5.10.0",
-    "tslint-config-prettier": "1.13.0",
-    "tslint-microsoft-contrib": "5.0.3",
+    "tslint": "5.11.0",
+    "tslint-config-prettier": "1.15.0",
+    "tslint-microsoft-contrib": "5.2.1",
     "tslint-plugin-prettier": "1.3.0",
-    "typescript": "2.9.2",
-    "webpack": "4.13.0",
+    "typescript": "3.0.1",
+    "webpack": "4.17.1",
     "webpack-bundle-analyzer": "2.13.1",
-    "webpack-cli": "3.0.8"
+    "webpack-cli": "3.1.0"
   }
 }
