--- a/package.json
+++ b/package.json
@@ -30,17 +30,18 @@
   "author": "khirayama",
   "license": "",
   "dependencies": {
-    "@types/leaflet": "1.2.10",
     "compression": "1.7.3",
     "cookie-parser": "1.4.3",
     "express": "4.16.3",
     "fuse.js": "3.2.1",
     "leaflet": "1.3.4",
-    "pug": "2.0.3"
+    "pug": "2.0.3",
+    "query-string": "6.1.0"
   },
   "devDependencies": {
     "@types/mocha": "5.2.5",
     "@types/node": "10.9.2",
+    "@types/query-string": "6.1.0",
     "autoprefixer": "9.1.3",
     "babel-core": "6.26.3",
     "babel-eslint": "9.0.0",
