--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "author": "khirayama",
   "license": "",
   "dependencies": {
+    "@types/axios": "0.14.0",
+    "axios": "0.18.0",
     "compression": "1.7.3",
     "cookie-parser": "1.4.3",
     "express": "4.16.3",
