--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "copy:files": "cpx 'src/**/*.{json,woff2,png,jpg,ico,wepb,js,svg,pug}' dist",
     "copy:files:watch": "cpx -w 'src/**/*.{json,woff2,png,jpg,ico,webp,js,svg,pug}' dist",
     "build:images": "node bin/minimize-images.js",
+    "generate:store": "ts-node bin/generate-store.ts",
     "test": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts'",
     "test:watch": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --watch-extensions ts --watch",
-    "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}'",
-    "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}'",
-    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' bin webpack.config.js .eslintrc.js .postcssrc.js",
+    "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
+    "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'bin/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' webpack.config.js .eslintrc.js .postcssrc.js",
     "precommit": "npm run lint:fix && npm run format",
     "metcis": "npx hint localhost:3030",
     "check": "npx npm-check-updates"
@@ -49,6 +50,8 @@
     "babel-eslint": "9.0.0",
     "babel-loader": "8.0.0",
     "babel-preset-env": "1.7.0",
+    "co": "4.6.0",
+    "co-prompt": "1.0.0",
     "concurrently": "4.0.1",
     "cpx": "1.5.0",
     "cssnano": "4.1.0",
@@ -72,6 +75,7 @@
     "postcss-simple-vars": "4.1.0",
     "power-assert": "1.6.0",
     "prettier": "1.14.2",
+    "puppeteer": "1.8.0",
     "rss": "1.2.2",
     "ts-loader": "4.5.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
