--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build:styles:watch": "postcss -c .postcssrc.js -w 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
     "copy:files": "cpx 'src/**/*.{json,woff2,png,jpg,ico,wepb,js,svg,pug}' dist",
     "copy:files:watch": "cpx -w 'src/**/*.{json,woff2,png,jpg,ico,webp,js,svg,pug}' dist",
-    "build:images": "node bin/minimize-images.js",
+    "build:images": "ts-node bin/minimize-images.ts",
     "generate:store": "ts-node bin/generate-store.ts",
     "test": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts'",
     "test:watch": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --watch-extensions ts --watch",
