--- a/package.json
+++ b/package.json
@@ -39,26 +39,19 @@
     "fuse.js": "3.2.1",
     "leaflet": "1.3.4",
     "pug": "2.0.3",
-    "query-string": "6.1.0"
+    "query-string": "6.1.0",
+    "rss": "1.2.2"
   },
   "devDependencies": {
     "@types/mocha": "5.2.5",
     "@types/node": "10.9.2",
     "@types/query-string": "6.1.0",
     "autoprefixer": "9.1.3",
-    "babel-core": "6.26.3",
-    "babel-eslint": "9.0.0",
-    "babel-loader": "8.0.0",
-    "babel-preset-env": "1.7.0",
     "co": "4.6.0",
     "co-prompt": "1.0.0",
     "concurrently": "4.0.1",
     "cpx": "1.5.0",
     "cssnano": "4.1.0",
-    "eslint": "5.4.0",
-    "eslint-config-prettier": "3.0.1",
-    "eslint-config-xo-space": "0.20.0",
-    "eslint-plugin-prettier": "2.6.2",
     "espower-typescript": "9.0.0",
     "glob": "7.1.3",
     "hint": "3.2.3",
@@ -76,7 +69,6 @@
     "power-assert": "1.6.0",
     "prettier": "1.14.2",
     "puppeteer": "1.8.0",
-    "rss": "1.2.2",
     "ts-loader": "4.5.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.11.0",
