--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "license": "",
   "dependencies": {
     "axios": "0.18.0",
+    "basic-auth-connect": "1.0.0",
     "compression": "1.7.3",
     "cookie-parser": "1.4.3",
     "express": "4.16.3",
