--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "clean": "rm -rf src/public dist",
-    "start": "npm run clean && npm run bundle:scripts && npm run build:styles && npm run compile:scripts && npm run copy:files && NODE_PATH=dist node dist/index.js",
+    "start": "npm run clean && npm run bundle:scripts && npm run build:styles && npm run compile:scripts && npm run copy:files && NODE_PATH=dist pm2 start dist/index.js",
     "dev": "npm run clean && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'npm run compile:scripts:watch' 'npm run copy:files:watch' 'NODE_PATH=dist nodemon dist/index.js'",
     "compile:scripts": "tsc -p tsconfig.server.json",
     "compile:scripts:watch": "tsc -p tsconfig.server.json -w",
@@ -38,6 +38,7 @@
     "express": "4.16.3",
     "fuse.js": "3.2.1",
     "leaflet": "1.3.4",
+    "pm2": "3.2.2",
     "pug": "2.0.3",
     "query-string": "6.1.0",
     "rss": "1.2.2"
