--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "preinstall": "npm i -g pm2",
     "clean": "rm -rf src/public dist log",
-    "start": "npm run clean && npm run compile:scripts && (npm run bundle:scripts & npm run build:styles & npm run copy:files) && NODE_PATH=dist pm2 start ecosystem.config.js --env production",
+    "start": "npm run clean && npm run compile:scripts && (npm run bundle:scripts & npm run build:styles & npm run copy:files) && NODE_PATH=dist node dist/index.js",
     "dev": "npm run clean && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'npm run compile:scripts:watch' 'npm run copy:files:watch' 'NODE_PATH=dist nodemon dist/index.js'",
     "compile:scripts": "tsc -p tsconfig.server.json",
     "compile:scripts:watch": "tsc -p tsconfig.server.json -w",
@@ -40,7 +39,6 @@
     "fuse.js": "3.2.1",
     "leaflet": "1.3.4",
     "morgan": "1.9.1",
-    "pm2": "3.2.2",
     "pug": "2.0.3",
     "query-string": "6.1.0",
     "rotating-file-stream": "1.3.9",
