--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "classnames": "2.2.6",
     "compression": "1.7.3",
     "cookie-parser": "1.4.3",
+    "deep-equal": "1.0.1",
     "express": "4.16.4",
     "fuse.js": "3.3.0",
     "leaflet": "1.3.4",
