--- a/package.json
+++ b/package.json
@@ -40,20 +40,15 @@
     "deep-equal": "1.0.1",
     "express": "4.16.4",
     "fuse.js": "3.3.0",
-    "leaflet": "1.3.4",
-    "mapbox-gl": "0.50.0",
     "morgan": "1.9.1",
     "pug": "2.0.3",
     "react": "16.6.0",
-    "react-dom": "16.6.0",
-    "react-transition-group": "2.5.0",
-    "rss": "1.2.2"
+    "react-dom": "16.6.0"
   },
   "devDependencies": {
     "@types/mapbox-gl": "0.49.0",
     "@types/mocha": "5.2.5",
     "@types/node": "10.12.0",
-    "@types/query-string": "6.1.1",
     "@types/react": "16.4.18",
     "@types/react-dom": "16.0.9",
     "autoprefixer": "9.3.1",
