Update README.md and some npm tasks

--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "copy:files:watch": "cpx -w 'src/**/*.{json,woff2,png,jpg,ico,webp,js,svg,pug,html}' dist",
     "build:images": "ts-node bin/minimize-images.ts",
     "generate:store": "ts-node bin/generate-store.ts",
-    "test": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts'",
+    "test": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --timeout 5000",
     "test:watch": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --watch-extensions ts --watch",
     "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
     "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
     "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'bin/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' webpack.config.js .eslintrc.js .postcssrc.js",
-    "run:speedtest": "sh run_speedtracker_test.sh",
-    "precommit": "npm run run:speedtest && npm run lint:fix && npm run format",
-    "metcis": "npx hint localhost:3030",
+    "precommit": "npm run lint:fix && npm run format",
+    "speedtest": "curl https://api.speedtracker.org/v1/test/khirayama/speedtracker/master/default?key=$SPEEDTEST_KEY",
+    "hint": "npx hint localhost:3030",
     "check": "npx npm-check-updates"
   },
   "keywords": [],
