--- a/app.yaml
+++ b/app.yaml
@@ -2,12 +2,16 @@ runtime: nodejs8
 env: standard
 instance_class: F1
 handlers:
+  - url: /images
+    static_dir: dist/assets/images
+  - url: /application
+    static_dir: dist/public/application
+  - url: /pages
+    static_dir: dist/public/pages
   - url: '/.*'
     script: auto
     secure: always
     redirect_http_response_code: '301'
-  - url: /images
-    static_dir: ./dist/assets/images
 automatic_scaling:
   min_idle_instances: automatic
   max_idle_instances: 1
