--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/mapbox-gl": "0.51.0",
     "@types/mocha": "5.2.5",
     "@types/node": "10.12.10",
+    "@types/query-string": "6.1.1",
     "@types/react": "16.7.7",
     "@types/react-dom": "16.0.10",
     "autoprefixer": "9.3.1",
@@ -77,6 +78,7 @@
     "power-assert": "1.6.1",
     "prettier": "1.15.2",
     "puppeteer": "1.10.0",
+    "query-string": "6.2.0",
     "ts-loader": "5.3.0",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.11.0",
