--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "express": "4.16.4",
     "express-useragent": "1.0.12",
     "fuse.js": "3.3.0",
-    "mapbox-gl": "0.51.0",
+    "mapbox-gl": "0.52.0-beta.1",
     "morgan": "1.9.1",
     "pug": "2.0.3",
     "query-string": "6.2.0",
@@ -50,13 +50,14 @@
     "react-dom": "16.6.3"
   },
   "devDependencies": {
-    "@types/mapbox-gl": "0.51.0",
+    "@hint/formatter-codeframe": "^2.0.0",
+    "@types/mapbox-gl": "0.51.1",
     "@types/mocha": "5.2.5",
-    "@types/node": "10.12.10",
+    "@types/node": "10.12.12",
     "@types/query-string": "6.1.1",
-    "@types/react": "16.7.7",
-    "@types/react-dom": "16.0.10",
-    "autoprefixer": "9.3.1",
+    "@types/react": "16.7.13",
+    "@types/react-dom": "16.0.11",
+    "autoprefixer": "9.4.2",
     "co": "4.6.0",
     "co-prompt": "1.0.0",
     "concurrently": "4.1.0",
@@ -64,29 +65,29 @@
     "cssnano": "4.1.7",
     "espower-typescript": "9.0.1",
     "glob": "7.1.3",
-    "hint": "4.0.3",
+    "hint": "4.1.0",
     "imagemin": "6.0.0",
     "imagemin-jpegtran": "6.0.0",
     "imagemin-pngquant": "6.0.0",
-    "imagemin-webp": "4.1.0",
+    "imagemin-webp": "5.0.0",
     "minimist": "1.2.0",
     "mocha": "5.2.0",
-    "nodemon": "1.18.6",
+    "nodemon": "1.18.7",
     "postcss-cli": "6.0.1",
     "postcss-import": "12.0.1",
     "postcss-nested": "4.1.0",
     "postcss-simple-vars": "5.0.1",
     "power-assert": "1.6.1",
-    "prettier": "1.15.2",
-    "puppeteer": "1.10.0",
-    "ts-loader": "5.3.0",
+    "prettier": "1.15.3",
+    "puppeteer": "1.11.0",
+    "ts-loader": "5.3.1",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.11.0",
-    "tslint-config-prettier": "1.16.0",
-    "tslint-microsoft-contrib": "5.2.1",
+    "tslint-config-prettier": "1.17.0",
+    "tslint-microsoft-contrib": "6.0.0",
     "tslint-plugin-prettier": "2.0.1",
-    "typescript": "3.1.6",
-    "webpack": "4.26.0",
+    "typescript": "3.2.1",
+    "webpack": "4.27.1",
     "webpack-bundle-analyzer": "3.0.3",
     "webpack-cli": "3.1.2"
   }
