Install packages related csv

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "test:watch": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --watch-extensions ts --watch",
     "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
     "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
-    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' 'bin/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg)' webpack.config.js .eslintrc.js .postcssrc.js",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'bin/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' webpack.config.js .eslintrc.js .postcssrc.js",
     "precommit": "npm run lint:fix && npm run format",
     "speedtest": "curl https://api.speedtracker.org/v1/test/khirayama/speedtracker/master/default?key=$SPEEDTEST_KEY",
     "hint": "npx hint localhost:3030",
@@ -63,6 +63,7 @@
     "concurrently": "4.1.0",
     "cpx": "1.5.0",
     "cssnano": "4.1.7",
+    "csv-parse": "4.1.0",
     "espower-typescript": "9.0.1",
     "glob": "7.1.3",
     "hint": "4.1.0",
