Create loadShop function

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "bundle:scripts:analyze": "NODE_ENV=production ANALYSIS=true webpack --mode production",
     "build:styles": "postcss -c .postcssrc.js 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
     "build:styles:watch": "postcss -c .postcssrc.js -w 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
-    "copy:files": "cpx 'src/**/*.{json,woff2,png,jpg,ico,wepb,js,svg,pug,html}' dist",
-    "copy:files:watch": "cpx -w 'src/**/*.{json,woff2,png,jpg,ico,webp,js,svg,pug,html}' dist",
+    "copy:files": "cpx 'src/**/*.{csv,json,woff2,png,jpg,ico,wepb,js,svg,pug,html}' dist",
+    "copy:files:watch": "cpx -w 'src/**/*.{csv,json,woff2,png,jpg,ico,webp,js,svg,pug,html}' dist",
     "build:images": "ts-node bin/minimize-images.ts",
     "generate:shop": "ts-node bin/generate-shop.ts",
     "test": "NODE_PATH=src mocha --require espower-typescript/guess './test/**/*.ts' --timeout 5000",
