Update packages related src

--- a/package.json
+++ b/package.json
@@ -42,20 +42,20 @@
     "express": "4.16.4",
     "express-useragent": "1.0.12",
     "fuse.js": "3.3.0",
-    "mapbox-gl": "0.52.0-beta.1",
+    "mapbox-gl": "0.52.0",
     "morgan": "1.9.1",
     "pug": "2.0.3",
     "query-string": "6.2.0",
-    "react": "16.6.3",
-    "react-dom": "16.6.3"
+    "react": "16.7.0",
+    "react-dom": "16.7.0"
   },
   "devDependencies": {
     "@hint/formatter-codeframe": "^2.0.0",
-    "@types/mapbox-gl": "0.51.1",
+    "@types/mapbox-gl": "0.51.3",
     "@types/mocha": "5.2.5",
-    "@types/node": "10.12.12",
+    "@types/node": "10.12.18",
     "@types/query-string": "6.1.1",
-    "@types/react": "16.7.13",
+    "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
     "autoprefixer": "9.4.2",
     "co": "4.6.0",
