Load csv data from Google Spreadsheet

--- a/secret.sample.yaml
+++ b/secret.sample.yaml
@@ -1,3 +1,7 @@
 env_variables:
   GOOGLE_ANALYTICS_CODE: XXX
   MAPBOX_TOKEN: XXX
+  GOOGLE_SPREADSHEET_SHEET_ID: XXX
+  GOOGLE_SPREADSHEET_SHOPS_PAGE_ID: XXX
+  GOOGLE_SPREADSHEET_SHOP_ATTRIBUTES_PAGE_ID: XXX
+  GOOGLE_SPREADSHEET_SHOP_OPEN_HOURS_PAGE_ID: XXX
