--- a/.envrc.sample
+++ b/.envrc.sample
@@ -1,3 +1,8 @@
+export GOOGLE_SPREADSHEET_SHEET_ID=
+export GOOGLE_SPREADSHEET_SHOPS_PAGE_ID=
+export GOOGLE_SPREADSHEET_SHOP_ATTRIBUTES_PAGE_ID=
+export GOOGLE_SPREADSHEET_SHOP_OPEN_HOURS_PAGE_ID=
 export GOOGLE_ANALYTICS_CODE=
 export MAPBOX_TOKEN=
+
 export SPEEDTEST_KEY=
