--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "express": "4.16.4",
     "express-useragent": "1.0.12",
     "fuse.js": "3.3.0",
+    "got": "9.5.0",
     "mapbox-gl": "0.52.0",
     "morgan": "1.9.1",
     "pug": "2.0.3",
