Create a scaffold for GAS

--- a/cms/package.json
+++ b/cms/package.json
@@ -4,22 +4,57 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "init": "clasp login",
+    "clean": "rm -rf dist tmp && mkdir dist tmp",
+    "dev": "npm run build && concurrently 'npm run compile:scripts:watch' 'npm run copy:files:watch' 'npm run build:scripts:watch' 'npm run build:styles:watch' 'npm run build:markups:watch'",
+    "build": "npm run clean && npm run compile:scripts && npm run copy:files && npm run build:scripts && npm run build:styles && npm run build:markups",
+    "compile:scripts": "tsc -p tsconfig.server.json",
+    "compile:scripts:watch": "tsc -p tsconfig.server.json -w",
+    "build:scripts": "webpack --mode=production",
+    "build:scripts:watch": "webpack --watch --mode=development",
+    "build:styles": "postcss -c .postcssrc.js 'src/styles/index.css' --base src/styles --dir './tmp'",
+    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/index.css' --base src/styles --dir './tmp'",
+    "build:markups": "npx inline-source --compress false --root ./tmp src/index.html > dist/index.html",
+    "build:markups:watch": "watch 'npm run build:markups' tmp -d -u",
+    "copy:files": "cpx 'src/**/*.json' dist",
+    "copy:files:watch": "cpx -w 'src/**/*.json' dist",
+    "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
+    "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.png|*.webp|*.svg|*.csv)' 'test/**/!(*.json|*.jpg|*.pug|*.png|*.webp|*.svg|*.csv)' 'bin/**/!(*.json|*.jpg|*.pug|*.png|*.webp|*.svg|*.csv)' webpack.config.js .eslintrc.js .postcssrc.js",
+    "precommit": "npm run lint:fix && npm run format",
+    "open": "clasp open --webapp",
+    "deploy": "NODE_ENV=productio npm run build && clasp push && clasp deploy"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google/clasp": "1.7.0",
     "@types/google-apps-script": "0.0.33",
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
+    "autoprefixer": "9.4.3",
     "clasp": "0.1.0",
+    "concurrently": "4.1.0",
+    "cpx": "1.5.0",
+    "cssnano": "4.1.8",
     "gas-webpack-plugin": "1.0.1",
+    "inline-source": "6.1.8",
+    "inline-source-cli": "1.2.0",
+    "postcss-cli": "6.1.0",
+    "postcss-import": "12.0.1",
+    "postcss-nested": "4.1.1",
+    "postcss-simple-vars": "5.0.1",
     "prettier": "1.15.3",
     "ts-loader": "5.3.2",
+    "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.12.0",
+    "tslint-config-prettier": "1.17.0",
+    "tslint-microsoft-contrib": "6.0.0",
+    "tslint-plugin-prettier": "2.0.1",
     "typescript": "3.2.2",
+    "watch": "1.0.2",
     "webpack": "4.28.2",
     "webpack-cli": "3.1.2"
   }
