--- a/cms/package.json
+++ b/cms/package.json
@@ -48,6 +48,8 @@
     "postcss-nested": "4.1.1",
     "postcss-simple-vars": "5.0.1",
     "prettier": "1.15.3",
+    "react": "16.7.0",
+    "react-dom": "16.7.0",
     "ts-loader": "5.3.2",
     "tsconfig-paths-webpack-plugin": "3.2.0",
     "tslint": "5.12.0",
