--- a/cms/package.json
+++ b/cms/package.json
@@ -30,8 +30,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@google/clasp": "1.7.0",
-    "@types/google-apps-script": "0.0.33",
     "@types/node": "10.12.18",
     "@types/react": "16.7.18",
     "@types/react-dom": "16.0.11",
@@ -40,9 +38,7 @@
     "concurrently": "4.1.0",
     "cpx": "1.5.0",
     "cssnano": "4.1.8",
-    "gas-webpack-plugin": "1.0.1",
-    "inline-source": "6.1.8",
-    "inline-source-cli": "1.2.0",
+    "express": "4.16.4",
     "postcss-cli": "6.1.0",
     "postcss-import": "12.0.1",
     "postcss-nested": "4.1.1",
