--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "deploy": "NODE_ENV=production npm run build && gcloud app deploy --stop-previous-version",
-    "clean": "rm -rf src/public dist log/*.log",
+    "clean": "rm -rf src/public dist",
     "build": "npm run clean && npm run compile:scripts && npm run bundle:scripts && npm run build:styles && npm run copy:files",
     "start": "node dist/index.js",
     "dev": "npm run clean && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'npm run compile:scripts:watch' 'npm run copy:files:watch' 'NODE_PATH=dist nodemon dist/index.js'",
