Update config files for new architecture

--- a/cms/package.json
+++ b/cms/package.json
@@ -1,29 +1,26 @@
 {
-  "name": "cms",
-  "version": "1.0.0",
+  "name": "coffee-handbook-cms",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
-    "init": "clasp login",
-    "clean": "rm -rf dist tmp && mkdir dist tmp",
-    "dev": "npm run build && concurrently 'npm run compile:scripts:watch' 'npm run copy:files:watch' 'npm run build:scripts:watch' 'npm run build:styles:watch' 'npm run build:markups:watch'",
-    "build": "npm run clean && npm run compile:scripts && npm run copy:files && npm run build:scripts && npm run build:styles && npm run build:markups",
+    "clean": "rm -rf src/public dist",
+    "build": "npm run clean && npm run compile:scripts && npm run bundle:scripts && npm run build:styles && npm run copy:files",
+    "start": "node dist/index.js",
+    "dev": "npm run clean && concurrently 'npm run bundle:scripts:watch' 'npm run build:styles:watch' 'npm run compile:scripts:watch' 'npm run copy:files:watch' 'NODE_PATH=dist nodemon dist/index.js'",
     "compile:scripts": "tsc -p tsconfig.server.json",
     "compile:scripts:watch": "tsc -p tsconfig.server.json -w",
-    "build:scripts": "webpack --mode=production",
-    "build:scripts:watch": "webpack --watch --mode=development",
-    "build:styles": "postcss -c .postcssrc.js 'src/styles/index.css' --base src/styles --dir './tmp'",
-    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/styles/index.css' --base src/styles --dir './tmp'",
-    "build:markups": "npx inline-source --compress false --root ./tmp src/index.html > dist/index.html",
-    "build:markups:watch": "watch 'npm run build:markups' tmp -d -u",
-    "copy:files": "cpx 'src/**/*.json' dist",
-    "copy:files:watch": "cpx -w 'src/**/*.json' dist",
+    "bundle:scripts": "NODE_ENV=production webpack --mode production",
+    "bundle:scripts:watch": "webpack -w --mode development",
+    "bundle:scripts:analyze": "NODE_ENV=production ANALYSIS=true webpack --mode production",
+    "build:styles": "postcss -c .postcssrc.js 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
+    "build:styles:watch": "postcss -c .postcssrc.js -w 'src/presentations/**/index.css' --base src/presentations --dir './dist/public'",
+    "copy:files": "cpx 'src/**/*.{csv,json,woff2,png,jpg,ico,wepb,js,svg,pug,html}' dist",
+    "copy:files:watch": "cpx -w 'src/**/*.{csv,json,woff2,png,jpg,ico,webp,js,svg,pug,html}' dist",
     "lint": "tslint --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
     "lint:fix": "tslint --fix --format verbose -c tslint.json 'src/**/*.{ts,tsx}' 'test/**/*.{ts,tsx}' 'bin/**/*.{ts,tsx}'",
-    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.png|*.webp|*.svg|*.csv)' 'test/**/!(*.json|*.jpg|*.pug|*.png|*.webp|*.svg|*.csv)' 'bin/**/!(*.json|*.jpg|*.pug|*.png|*.webp|*.svg|*.csv)' webpack.config.js .eslintrc.js .postcssrc.js",
+    "format": "prettier --ignore-path .gitignore --config .prettierrc --write 'src/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'test/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' 'bin/**/!(*.json|*.jpg|*.pug|*.html|*.png|*.webp|*.svg|*.csv)' webpack.config.js .eslintrc.js .postcssrc.js",
     "precommit": "npm run lint:fix && npm run format",
-    "open": "clasp open --webapp",
-    "deploy": "NODE_ENV=productio npm run build && clasp push && clasp deploy",
     "check": "npx npm-check-updates"
   },
   "keywords": [],
@@ -39,6 +36,7 @@
     "cpx": "1.5.0",
     "cssnano": "4.1.8",
     "express": "4.16.4",
+    "nodemon": "1.18.9",
     "postcss-cli": "6.1.0",
     "postcss-import": "12.0.1",
     "postcss-nested": "4.1.1",
