--- a/cms/tsconfig.server.json
+++ b/cms/tsconfig.server.json
@@ -4,9 +4,12 @@
     "outDir": "./dist"
   },
   "include": [
-    "scripts/**/*.ts",
-    "scripts/**/*.tsx",
-    "scripts/**/*.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx",
+    "src/**/*.d.ts",
     "./node_modules/@types/**/*.d.ts"
+  ],
+  "exclude": [
+    "src/presentations/**/*.ts"
   ]
 }
