Install basic auth for shop edit pages

--- a/app/.envrc.sample
+++ b/app/.envrc.sample
@@ -5,4 +5,7 @@ export GOOGLE_SPREADSHEET_SHOP_OPEN_HOURS_PAGE_ID=
 export GOOGLE_ANALYTICS_CODE=
 export MAPBOX_TOKEN=
 
+export BASIC_AUTH_USER=
+export BASIC_AUTH_PASSWORD=
+
 export SPEEDTEST_KEY=
