--- a/app/secret.sample.yaml
+++ b/app/secret.sample.yaml
@@ -5,3 +5,5 @@ env_variables:
   GOOGLE_SPREADSHEET_SHOPS_PAGE_ID: XXX
   GOOGLE_SPREADSHEET_SHOP_ATTRIBUTES_PAGE_ID: XXX
   GOOGLE_SPREADSHEET_SHOP_OPEN_HOURS_PAGE_ID: XXX
+  BASIC_AUTH_USER: XXX
+  BASIC_AUTH_PASSWORD: XXX
